--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "prepublishOnly": "pnpm run build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "@types/lodash": "^4.17.19",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react-swc": "^3.10.2",
@@ -33,5 +35,9 @@
   "peerDependencies": {
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
+  },
+  "packageManager": "pnpm@10.12.1",
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
