--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "react-responsive-scale",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "type": "module",
   "description": "A React component for responsive scaling of data dashboards",
-  "main": "dist/react-responsive-scale.cjs.js",
+  "main": "dist/react-responsive-scale.es.js",
   "module": "dist/react-responsive-scale.es.js",
   "files": [
     "dist"
